; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_read_support_filter_lrzip.c_archive_read_support_filter_lrzip.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_read_support_filter_lrzip.c_archive_read_support_filter_lrzip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archive = type { i32 }
%struct.archive_read = type { i32 }
%struct.archive_read_filter_bidder = type { i8*, i32, i32*, i32, i32, i32* }

@ARCHIVE_READ_MAGIC = common dso_local global i32 0, align 4
@ARCHIVE_STATE_NEW = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"archive_read_support_filter_lrzip\00", align 1
@ARCHIVE_OK = common dso_local global i64 0, align 8
@ARCHIVE_FATAL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"lrzip\00", align 1
@lrzip_bidder_bid = common dso_local global i32 0, align 4
@lrzip_bidder_init = common dso_local global i32 0, align 4
@lrzip_reader_free = common dso_local global i32 0, align 4
@ARCHIVE_ERRNO_MISC = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [53 x i8] c"Using external lrzip program for lrzip decompression\00", align 1
@ARCHIVE_WARN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @archive_read_support_filter_lrzip(%struct.archive* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.archive*, align 8
  %4 = alloca %struct.archive_read*, align 8
  %5 = alloca %struct.archive_read_filter_bidder*, align 8
  store %struct.archive* %0, %struct.archive** %3, align 8
  %6 = load %struct.archive*, %struct.archive** %3, align 8
  %7 = bitcast %struct.archive* %6 to %struct.archive_read*
  store %struct.archive_read* %7, %struct.archive_read** %4, align 8
  %8 = load %struct.archive*, %struct.archive** %3, align 8
  %9 = load i32, i32* @ARCHIVE_READ_MAGIC, align 4
  %10 = load i32, i32* @ARCHIVE_STATE_NEW, align 4
  %11 = call i32 @archive_check_magic(%struct.archive* %8, i32 %9, i32 %10, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  %12 = load %struct.archive_read*, %struct.archive_read** %4, align 8
  %13 = call i64 @__archive_read_get_bidder(%struct.archive_read* %12, %struct.archive_read_filter_bidder** %5)
  %14 = load i64, i64* @ARCHIVE_OK, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %1
  %17 = load i32, i32* @ARCHIVE_FATAL, align 4
  store i32 %17, i32* %2, align 4
  br label %38

18:                                               ; preds = %1
  %19 = load %struct.archive_read_filter_bidder*, %struct.archive_read_filter_bidder** %5, align 8
  %20 = getelementptr inbounds %struct.archive_read_filter_bidder, %struct.archive_read_filter_bidder* %19, i32 0, i32 5
  store i32* null, i32** %20, align 8
  %21 = load %struct.archive_read_filter_bidder*, %struct.archive_read_filter_bidder** %5, align 8
  %22 = getelementptr inbounds %struct.archive_read_filter_bidder, %struct.archive_read_filter_bidder* %21, i32 0, i32 0
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8** %22, align 8
  %23 = load i32, i32* @lrzip_bidder_bid, align 4
  %24 = load %struct.archive_read_filter_bidder*, %struct.archive_read_filter_bidder** %5, align 8
  %25 = getelementptr inbounds %struct.archive_read_filter_bidder, %struct.archive_read_filter_bidder* %24, i32 0, i32 4
  store i32 %23, i32* %25, align 4
  %26 = load i32, i32* @lrzip_bidder_init, align 4
  %27 = load %struct.archive_read_filter_bidder*, %struct.archive_read_filter_bidder** %5, align 8
  %28 = getelementptr inbounds %struct.archive_read_filter_bidder, %struct.archive_read_filter_bidder* %27, i32 0, i32 3
  store i32 %26, i32* %28, align 8
  %29 = load %struct.archive_read_filter_bidder*, %struct.archive_read_filter_bidder** %5, align 8
  %30 = getelementptr inbounds %struct.archive_read_filter_bidder, %struct.archive_read_filter_bidder* %29, i32 0, i32 2
  store i32* null, i32** %30, align 8
  %31 = load i32, i32* @lrzip_reader_free, align 4
  %32 = load %struct.archive_read_filter_bidder*, %struct.archive_read_filter_bidder** %5, align 8
  %33 = getelementptr inbounds %struct.archive_read_filter_bidder, %struct.archive_read_filter_bidder* %32, i32 0, i32 1
  store i32 %31, i32* %33, align 8
  %34 = load %struct.archive*, %struct.archive** %3, align 8
  %35 = load i32, i32* @ARCHIVE_ERRNO_MISC, align 4
  %36 = call i32 @archive_set_error(%struct.archive* %34, i32 %35, i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.2, i64 0, i64 0))
  %37 = load i32, i32* @ARCHIVE_WARN, align 4
  store i32 %37, i32* %2, align 4
  br label %38

38:                                               ; preds = %18, %16
  %39 = load i32, i32* %2, align 4
  ret i32 %39
}

declare dso_local i32 @archive_check_magic(%struct.archive*, i32, i32, i8*) #1

declare dso_local i64 @__archive_read_get_bidder(%struct.archive_read*, %struct.archive_read_filter_bidder**) #1

declare dso_local i32 @archive_set_error(%struct.archive*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
